Added options on the Proxy Servers and Downloads page to enable caching of HTTP and FTP downloads by Webmin. This is useful if your network does not have a proxy (like Squid), and you often download the same files multiple times.
Added a form to the Webmin Themes page for exporting a theme to a file.
---- Changes since 1.270 ----
Custom category names can be defined on a per-language basis.
Added a button on the Proxy Servers and Downloads page for clearing the cache.
---- Changes since 1.290 ----
Added support for installing and upgrading the Debian package version of Webmin.
Updates to a module that has already been updated and are not needed are not displayed.
Added an setting to the Advanced Options page for showing full stack traces when Webmin's common error function is displayed. This is useful for tracking down bugs.
Added a field on the Advanced Options page for setting the Umask, which determines default permissions for new files created by Webmin.
---- Changes since 1.300 ----
Added a section to the SSL Encryption page for uploading an existing PEM format SSL key and certificate.
Added buttons on the Proxy Servers and Downloads page for viewing and deleting cached files, and clearing the entire cache.
Fixed a bug that prevents module installs from RPMs from working.
---- Changes since 1.320 ----
Added an option to the Advanced page for supressing the display of Perl errors.
Added a new Mobile Device Options page for defining a custom theme and login process for mobile browsers.
---- Changes since 1.330 ----
Added an option to the Logging page to write Webmin actions to syslog.
Converted many pages to use new ui-lib.pl functions, and broke down long forms using tabs.
When Webmin's detected OS is automatically updated, Usermin's will be too (if it is an equivalent version).
---- Changes since 1.340 ----
Added an option to the Proxy Servers form to fallback to a direct connection if the proxy is down.