@@ -337,6 +337,14 @@ ssl_tabssl=SSL settings
 ssl_tabips=Per-IP certificates
 ssl_tabcreate=Create certificate
 ssl_tabupload=Upload certificate
+ssl_tabcurrent=Current certificate
+ssl_cheader=Details of current certificate
+ssl_typeself=Self-signed
+ssl_typereal=Signed by CA
+ssl_download=Download certificate
+ssl_pem=PEM format..
+ssl_current=This section shows the details of the current Webmin SSL certificate, and allows it to be downloaded so that it can be accepted by your browser.
+ssl_edownload=Failed to extract PEM data from certificate
 
 newkey_err=Failed to create SSL key
 newkey_ecn=Missing or invalid server name
@@ -463,6 +471,11 @@ ca_o=Organisation
 ca_sp=State
 ca_c=Country code
 ca_city=City or locality
+ca_issuer_cn=Issuer name
+ca_issuer_o=Issuer organization
+ca_issuer_email=Issuer email address
+ca_type=Certificate type
+ca_notafter=Valid until
 ca_create=Setup certificate authority
 ca_oldmsg1=The CA certificate this server is using is displayed below. You may change it by pasting in the certificate from another CA, but any certificates already issued to users will no longer work.
 ca_oldmsg2=If you have already setup a CA on another Webmin server, you can paste its certificate below instead of setting up a new CA. This will allow users from the other server to be recognised by this server as well.
